feat: Update Gson dependency to version 2.10.1 and implement BoardPersistence interface